# cache-kit.rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  docker-compose.yml
.github/workflows/: benchmark.yml  ci-examples.yml  ci.yml  pages.yml  release.yml
benches/: cache_benchmark.rs  memcached_benchmark.rs  redis_benchmark.rs
docs/: CNAME  Gemfile  README.md  _config.yml  index.md
docs/_data/: navigation.yml
docs/_pages/: api-frameworks.md  async-model.md  backends.md  concepts.md  database-compatibility.md  installation-agents.md  installation.md  serialization.md
docs/_pages/guides/: failure-modes.md  index.md  monitoring.md  quick-start-request-lifecycle.md  troubleshooting.md
docs/_pages/reference/: index.md
docs/_pages/reference/_site/: index.html
examples/: advanced_builder.rs  basic_usage.rs  multiple_backends.rs
examples/actixsqlx/: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
examples/actixsqlx/.sqlx/: query-5ebd439333ddf7d4655d6e04874869a4cdcfa2ab95bfadefb8c6cd168ed96070.json  query-7ac91f4f5c6fbf813795b4704a3d03b78f51915ee40f5a1faa6308be634fd39c.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-87f09839bc28692ea0681164d4cd131d798ea8e946062b8fa89704c430d93a01.json  query-99de662cdfb6846d52891edb48226729c54fe7c5d9e0ec32d746ca7acd8c1574.json  query-b0c091b165643294e23e9cfbe53c03381d357ee244cf8d7a7762ea48ecd23f6f.json
examples/actixsqlx/migrations/: 001_create_users.sql  002_create_products.sql
examples/actixsqlx/src/: error.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs
examples/actixsqlx/src/services/: mod.rs  product_service.rs  user_service.rs
examples/actixsqlx/tests/: advanced_integration_tests.rs  api_integration_tests.rs  api_integration_tests.rs.orig
examples/axumgrpc/: Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml
examples/axumgrpc/migrations/: 001_init_schema.sql  002_add_indexes.sql  003_seed_data.sql
examples/axumgrpc/proto/: invoices.proto
examples/axumgrpc/src/: cache_config.rs  db.rs  feeders.rs  grpc.rs  lib.rs  main.rs  models.rs  repository.rs
examples/axumgrpc/tests/: grpc_cache_test.rs
examples/axummetrics/: Cargo.toml  Makefile  README.md  main.rs  metrics.rs
make/: build.mk  dev.mk  infra.mk  perf.mk  quality.mk  release.mk
prompts/: MEDIUM_AMP_FULL_REVIEW.md  MEDIUM_CLAUDE_CODE_FULL_REVIEW.md  MEDIUM_CURSOR_FULL_REVIEW.md
src/: entity.rs  error.rs  expander.rs  feed.rs  key.rs  lib.rs  observability.rs  repository.rs  service.rs  strategy.rs
src/backend/: inmemory.rs  memcached.rs  mod.rs  redis.rs
src/serialization/: mod.rs
tests/: golden_blob_generator.rs  golden_blobs.rs  integration_serialization.rs  integration_test.rs  memcached_integration_test.rs  proptest_serialization.rs  redis_integration_test.rs
tests/golden/: README.md
