[package]
name = "cache-kit-actix-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Cache-kit from parent directory
cache-kit = { path = "../.." }

# Actix Web
actix-web = "4.4"
actix-rt = "2.9"

# Database (SQLX + PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v7", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Environment variables
dotenv = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[[bin]]
name = "cache-kit-actix-example"
path = "src/main.rs"

[lib]
name = "cache_kit_actix_example"
path = "src/lib.rs"

[dev-dependencies]
actix-web = "4.4"
